deploy/k8s/canary-istio/deployment-stable.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rio-api-stable
spec:
  replicas: 3
  selector:
    matchLabels: { app: rio-api, version: stable }
  template:
    metadata:
      labels: { app: rio-api, version: stable }
    spec:
      containers:
        - name: api
          image: rio-api:v1.0.0
          ports: [{ containerPort: 8080 }]
